file(GLOB_RECURSE wordle_sources ${PROJECT_SOURCE_DIR}/src/*/*.cc)
add_library(wordle_shared SHARED ${wordle_sources})

######################################################################################################################
# THIRD-PARTY SOURCES
######################################################################################################################